--- a/Cemetery/Views/Account/Register.cshtml
+++ b/Cemetery/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
 <form method="post" asp-action="Register" asp-controller="Account">
     @if (User.IsInRole(Cemetery.Utility.Helper.Admin))
     {
-        <h4>Regissztráljon egy új admin account-ot!</h4>
+        <h4>Regissztráljon egy új admin vagy érdeklődő account-ot!</h4>
     }
     else
     {
@@ -44,7 +44,7 @@
     <div class="form-group row">
         <label class="col-md-2" asp-for="RoleName"></label>
         <div class="col-md-10">
-            <select asp-for="RoleName" asp-items="@Cemetery.Utility.Helper.GetRolesForDropDown()" class="form-control"></select>
+            <select asp-for="RoleName" asp-items="@Cemetery.Utility.Helper.GetRolesForDropDown(User.IsInRole(Cemetery.Utility.Helper.Admin))" class="form-control"></select>
             <span asp-validation-for="RoleName" class="text-danger"></span>
         </div>
     </div>
