--- a/Cemetery/Views/Undertaker/Edit.cshtml
+++ b/Cemetery/Views/Undertaker/Edit.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Cemetery.Models.Undertaker
+@if (@ViewBag.Errormessage != null)
+{<p class="error">@ViewBag.Errormessage</p>}
 
 <form method="post">
     <input asp-for="UndertakerId" hidden />
