--- a/Cemetery/Views/Burial/Delete.cshtml
+++ b/Cemetery/Views/Burial/Delete.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Cemetery.Models.Burial
+@if (@ViewBag.Errormessage != null)
+{<p class="error">@ViewBag.Errormessage</p>}
+
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="FuneralId" hidden />
