--- a/Cemetery/Views/Dead/Create.cshtml
+++ b/Cemetery/Views/Dead/Create.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Cemetery.Models.ViewModels.DeadVM
+@if (@ViewBag.Errormessage != null)
+{<p class="error">@ViewBag.Errormessage</p>}
+
 
 <form method="post" asp-action="Create">
     <div class="border p-3">
