--- a/Cemetery/Views/Grave/Delete.cshtml
+++ b/Cemetery/Views/Grave/Delete.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Cemetery.Models.Grave
+@if (@ViewBag.Errormessage != null)
+{<p class="error">@ViewBag.Errormessage</p>}
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="GraveId" hidden />
@@ -50,7 +52,7 @@
                     </div>
                     <div class="col-8">
                         <input asp-for="Side" disabled class="form-control" />
-                    </div>  
+                    </div>
                 </div>
 
                 <div class="form-group row">
