--- a/Cemetery/Views/Redemption/Delete.cshtml
+++ b/Cemetery/Views/Redemption/Delete.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Cemetery.Models.Redemption
+@if (@ViewBag.Errormessage != null)
+{<p class="error">@ViewBag.Errormessage</p>}
+
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="RedemptionId" hidden />
