--- a/Cemetery/Views/Religion/Edit.cshtml
+++ b/Cemetery/Views/Religion/Edit.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Cemetery.Models.Religion
+@if (@ViewBag.Errormessage != null)
+{<p class="error">@ViewBag.Errormessage</p>}
 
 <form method="post">
     <input asp-for="ReligionId" hidden />
