--- a/Cemetery/Views/Settlement/Delete.cshtml
+++ b/Cemetery/Views/Settlement/Delete.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Cemetery.Models.Settlement
+@if (@ViewBag.Errormessage != null)
+{<p class="error">@ViewBag.Errormessage</p>}
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="SettlementId" hidden />
