--- a/Cemetery/Views/Shared/_Layout.cshtml
+++ b/Cemetery/Views/Shared/_Layout.cshtml
@@ -52,6 +52,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Redemption" asp-action="Index">Megváltások</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Redemption" asp-action="GetExpiredRedemptions">Lejárt sírok</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Dead" asp-action="Index">Elhunytak</a>
                             </li>
                             <li class="nav-item">
@@ -59,11 +62,11 @@
                             </li>
                         }
                         else @if (User.IsInRole(Cemetery.Utility.Helper.Curious))
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Redemption" asp-action="Index">Sírmegváltásaim</a>
-                            </li>
-                        }
+                   {
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Redemption" asp-route-email=@User.Identity.Name asp-action="GetRedemptionsFromEmail">Sírmegváltásaim</a>
+                    </li>
+                }
                     </ul>
                 </div>
             </div>
@@ -77,7 +80,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Cemetery - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Cemetery - <a asp-area="" asp-controller="Home" asp-action="Index">Főoldal</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
