--- a/Cemetery/Views/Undertaker/Delete.cshtml
+++ b/Cemetery/Views/Undertaker/Delete.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Cemetery.Models.Undertaker
+@if (@ViewBag.Errormessage != null)
+{<p class="error">@ViewBag.Errormessage</p>}
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="UndertakerId" hidden />
